# eaiplatform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  INSTRUCTIONS.md  PLAN.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: contrarian-breaker.md  first-principles-architect.md  optimist-scout.md
.claude/hooks/: check_commit_oneline.py  ruff_check.py
.claude/skills/doc-driven-dev/: SKILL.md
.claude/skills/plan-council/: SKILL.md
.claude/skills/security-scan/: SKILL.md
contracts/: README.md  chunk_identity.md  postgres_ingestion.schema.sql  qdrant_chunk_payload.schema.json  qdrant_collection.json
docker/: Dockerfile  entrypoint.sh
docs/: architecture-enforcement-dev-log.md  core-api-architecture.md  core-api-build-plan.md  core-api-dev-log.md  design-decisions.md  embedding-sidecar-build-plan.md  embedding-sidecar-dev-log.md  frontend-build-plan.md  frontend-dev-log.md  ingestion-worker-build-plan.md  ingestion-worker-dev-log.md  prompt-guard-sidecar-build-plan.md  prompt-guard-sidecar-dev-log.md  smoke-tests.md
frontend/: .env.example  .gitignore  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  router.tsx  vite-env.d.ts
frontend/src/api/: client.ts  endpoints.ts  mockAgent.ts  mockArtifacts.ts  sse.ts
frontend/src/auth/: AuthProvider.tsx  cognito.ts  devMint.ts  types.ts  useScope.ts
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/features/conversation/: ActionStream.tsx  ArtifactViewer.tsx  Composer.tsx  ConversationView.tsx  Feedback.tsx  HistorySidebar.tsx  Markdown.tsx  MessageList.tsx  SourcesPanel.tsx  artifacts.ts  useConversation.ts
frontend/src/lib/: env.ts  monaco.ts  queryKeys.ts  utils.ts
frontend/src/routes/: __root.tsx  login.tsx
frontend/src/routes/conversation/: index.tsx
frontend/src/routes/dashboard/: index.tsx
frontend/src/routes/observability/: index.tsx
frontend/src/routes/search/: index.tsx
frontend/src/store/: auth.ts
frontend/src/theme/: ThemeProvider.tsx  themes.css
ingestion_worker/: __init__.py  config.py  identity.py  pyproject.toml
ingestion_worker/adapters/av_scanner/: clamd.py
ingestion_worker/adapters/sink/: qdrant.py
ingestion_worker/domain/: chunk.py  document.py  enums.py
ingestion_worker/pipeline/: dedup.py  enrich.py  orchestrator.py  report.py  security_gate.py
ingestion_worker/pipeline/chunkers/: base.py  code.py  pdf.py  router.py  text.py  ticket.py
ingestion_worker/ports/: acquisition.py  av_scanner.py  content_guard.py  embedder.py  parser.py  registry.py  sink.py  staging.py
ingestion_worker/tests/: _contract_validator.py  fakes.py  test_av_scanner_clamd.py  test_contract_qdrant.py  test_dedup.py  test_identity.py  test_pipeline.py  test_security_gate.py  test_sink_qdrant.py
proto/: embedding.proto
sidecars/model_server/: Dockerfile  config.py  embedder.py  pyproject.toml  server.py
sidecars/model_server/proto/: __init__.py  embedding_pb2.py  embedding_pb2_grpc.py
sidecars/model_server/scripts/: EXPORT_RUNBOOK.md  bench.py  export_quantize.py
sidecars/model_server/tests/: test_embedder.py  test_sparse_postproc.py
sidecars/prompt_guard/: .env.example  .gitignore  Dockerfile  app.py  classifier.py  config.py  pyproject.toml
sidecars/prompt_guard/scripts/: bench.py
sidecars/prompt_guard/tests/: test_classifier.py
src/adapters/agent/: __init__.py  langgraph_runner.py
src/adapters/agent/a2a/: protocol.py  registry.py
src/adapters/auth/: __init__.py  cognito_verifier.py  hs256_verifier.py
src/adapters/cache/: valkey.py
src/adapters/guard/: http_guard.py  null_guard.py
src/adapters/llm/: __init__.py  bedrock.py
src/adapters/mcp/: __init__.py  catalog.py  connector.py  target_resolver.py  transport.py
src/adapters/mcp/tools/: __init__.py  base.py  confluence.py  github.py  servicenow.py  zendesk.py
src/adapters/observability/: __init__.py  noop.py
src/adapters/observability/phoenix/: __init__.py  client.py  drift.py  semconv.py  tracing.py
src/adapters/policy/: __init__.py  session_risk_store.py
src/adapters/retriever/: __init__.py  qdrant.py
src/adapters/retriever/model_server/: __init__.py  embed_client.py  rerank_client.py
src/adapters/store/: __init__.py  postgres.py
src/api/: main.py
src/api/middleware/: auth.py  telemetry.py
src/api/routes/: agent.py  chat.py  health.py  observability.py  search.py
src/api/schemas/: agent.py  chat.py  health.py  observability.py  search.py
src/config/: di.py  settings.py
src/core/domain/: agent_control.py
src/core/domain/entities/: chunk.py  document.py  job.py  message.py  session.py
src/core/domain/policy/: __init__.py  trajectory.py  types.py
src/core/domain/value_objects/: embedding_vector.py  guard_verdict.py  permission_scope.py  retrieval_result.py
src/core/ports/: agent.py  cache.py  guard.py  llm.py  mcp_connector.py  observability.py  queue.py  retriever.py  session_risk_store.py  store.py  target_resolver.py  token_verifier.py
src/core/use_cases/: __init__.py
src/core/use_cases/agent/: __init__.py  interrupt_agent.py  manage_artifacts.py  run_agent.py
src/core/use_cases/chat/: __init__.py  manage_session.py  send_message.py
src/core/use_cases/observability/: __init__.py  evaluate_turn.py  get_phoenix_data.py
src/core/use_cases/policy/: policy_decision_point.py  trajectory_monitor.py
src/daemon/: tasks.py
src/observability/: drift.py  metrics.py  otel.py
src/tests/: _contract_validator.py  test_agent_mcp_wiring.py  test_agent_mock.py  test_architecture.py  test_auth.py  test_cache_valkey.py  test_chat_security.py  test_cognito_verifier.py  test_contract_qdrant.py  test_guard.py  test_logging.py  test_manage_artifacts.py  test_manage_session.py  test_mcp.py  test_observability.py  test_pdp_chokepoint.py  test_permission_scope.py  test_policy_decision_point.py  test_search_chunks.py  test_session_risk_store.py  test_trajectory_monitor.py
(+6 files in other folders)
