[project]
name = "core-api"
version = "0.1.0"
description = "Enterprise AI platform core API — permission-scoped RAG, agents, MCP, A2A (hexagonal)"
readme = "PLAN.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "orjson>=3.10",
    "asyncpg>=0.30",
    "redis>=5.2",
    "qdrant-client>=1.12",
    "grpcio>=1.68",
    "protobuf>=5.28",
    "llama-index-core>=0.12",
    "boto3>=1.35",
    "aioboto3>=13.2",
    "arq>=0.26",
    "httpx>=0.28",
    "pyjwt[crypto]>=2.10",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "locust>=2.32",
    "py-spy>=0.4",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/core",
    "src/adapters",
    "src/api",
    "src/config",
    "src/observability",
    "src/daemon",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
