[project]
name = "ingestion-worker"
version = "0.1.0"
description = "Standalone ingestion worker — acquire, gate, parse, guard, chunk, embed, dual-write."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "qdrant-client>=1.12",
    "asyncpg>=0.30",
    "arq>=0.26",
    "clamd>=1.0.2",
    # Remaining worker-owned adapters add their deps as they land:
    #   FlagEmbedding/transformers (bge-m3), pypdf, python-docx, tree-sitter,
    #   presidio-analyzer, boto3. Kept out until Phase 3/4 so the earlier phases stay light.
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Put the repo root on sys.path so `import ingestion_worker` resolves whether tests are
# run from here or from the repo root via `python -m pytest ingestion_worker/tests`.
pythonpath = [".."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
