[project]
name = "eai-model-server"
version = "0.1.0"
description = "bge-m3 embedding sidecar (gRPC) for the Core API query path. CPU-only."
requires-python = ">=3.12,<3.13"
dependencies = [
    "FlagEmbedding>=1.3.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = ["grpcio-tools>=1.60.0", "pytest>=8.0.0"]

# Run-from-source service (executed via `python -m sidecars.model_server.server`),
# not a published library. pyproject is the dependency source of truth for dev
# (`uv pip install -r pyproject.toml`); the Docker image installs the same deps.
