[project]
name = "eai-prompt-guard"
version = "0.1.0"
description = "Llama Prompt Guard 2 (86M) injection/jailbreak screening sidecar (HTTP). CPU-only."
requires-python = ">=3.12,<3.13"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.2.0",                 # CPU build (install from the cpu index — see Dockerfile)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

# Run-from-source service (`python -m sidecars.prompt_guard.app`), not a published
# library. pyproject is the dependency source of truth for dev
# (`uv pip install -r pyproject.toml`); the Docker image installs the same deps.
